--- a/package.json
+++ b/package.json
@@ -10,12 +10,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-location": "~14.2.2",
+    "expo-secure-store": "^11.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gifted-chat": "^1.0.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "0.30.2",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-navbar": "^2.1.0",
+    "react-native-paper": "^4.12.1",
+    "react-native-phone-call": "^1.2.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
